--- a/assets/css/titlebar.css
+++ b/assets/css/titlebar.css
@@ -1,10 +1,11 @@
 /* Estilos para a barra de título personalizada */
 .titlebar {
     height: 50px;
-    background-color: #000000;
+    background-color: var(--titlebar-color);
     color: #cccccc;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0;
     user-select: none;
     -webkit-app-region: drag; /* Permite arrastar a janela pela barra de título */
@@ -13,19 +14,60 @@
     left: 0;
     right: 0;
     z-index: 9999;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid rgba(51, 51, 51, 0.5);
+    overflow: hidden;
+    backdrop-filter: blur(10px);
 }
 
-.titlebar-title {
+.titlebar .logo {
+    width: 60px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.titlebar .logo img {
+    width: 36px;
+}
+
+/* .titlebar-title {
     margin-left: 10px;
     flex-grow: 1;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    display: flex;
+    align-items: center;
+} */
+
+.titlebar-action-button {
+    background-color: rgba(255, 255, 255, 0.1);
+    border: none;
+    color: #cccccc;
+    padding: 5px 10px;
+    margin-left: 15px;
+    border-radius: 3px;
+    font-size: 12px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    -webkit-app-region: no-drag; /* Permite clicar no botão */
+}
+
+.titlebar-action-button:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.titlebar-action-button .material-icons {
+    font-size: 16px;
 }
 
 .titlebar-controls {
+
     display: flex;
+    justify-self: end;
     -webkit-app-region: no-drag; /* Permite clicar nos controles */
 }
 
