--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -7,6 +7,11 @@
     border-radius: 5px;
 }
 
+/* Ajusta a sidebar quando em modo de tela cheia */
+body.is-fullscreen .main-sidebar {
+    margin-top: 0; /* Remove qualquer margem superior quando em tela cheia */
+}
+
 .main-sidebar .action-button {
     position: relative;
     background: none;
