--- a/src/renderer/css/main.css
+++ b/src/renderer/css/main.css
@@ -275,31 +275,86 @@ h2 .material-icons {
 .tab-controls {
     display: flex;
     background-color: var(--bg-color-light);
-    padding: 0;
-}
-
-.tab-button {
-    cursor: pointer;
-    border: none;
-    background: #00000055;
-    color: var(--text-color);
-    display: inline-flex;
-    align-items: center;
-    gap: 0;
     padding: 10px;
-    border: solid 1px var(--border-color);
-    transition: background-color 0.2s ease, color 0.2s ease;
+    align-items: center;
+    justify-content: flex-end;
 }
 
-.tab-button:hover {
-    background-color: var(--hover-bg);
-    color: var(--text-color-light);
+/* Estilo para o switch de código */
+.code-switch {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
-.tab-button.active {
-    background-color: #FFFFFF55;
+.code-switch-label {
     color: var(--text-color-light);
-    border-bottom: 2px solid var(--accent-color);
+    font-size: 14px;
+}
+
+/* Estilo do switch */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 30px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--bg-color);
+    transition: .4s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 22px;
+    width: 22px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    z-index: 1;
+}
+
+.code-icon {
+    color: var(--accent-color);
+    font-size: 18px;
+    position: absolute;
+    right: 8px;
+    z-index: 0;
+}
+
+input:checked + .slider {
+    background-color: var(--accent-color);
+}
+
+input:checked + .slider:before {
+    transform: translateX(30px);
+}
+
+.slider.round {
+    border-radius: 34px;
+    border: 1px solid var(--border-color);
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
 
 .tab-content {
@@ -315,12 +370,16 @@ h2 .material-icons {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 10px;
+    padding: 0;
     box-sizing: border-box;
+    opacity: 0;
+    transition: opacity 0.3s ease;
 }
 
 .tab-pane.active {
     display: block; /* Mostra o painel ativo */
+    opacity: 1;
+    z-index: 1;
 }
 
 /* Preview */
