--- a/src/renderer/css/sidebar.css
+++ b/src/renderer/css/sidebar.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 60px;
+    width: 40px;
     background-color: var(--bg-card);
-    border-radius: 5px;
+    border-radius: 8px;
 }
 
 /* Ajusta a sidebar quando em modo de tela cheia */
@@ -16,7 +16,7 @@ body.is-fullscreen .main-sidebar {
     position: relative;
     background: none;
     border: none;
-    width: 60px;
+    width: 40px;
     height: 60px;
     display: flex;
     justify-content: center;
@@ -67,14 +67,15 @@ body.is-fullscreen .main-sidebar {
 .sidebar-left,
 .sidebar-right {
     width: 250px;
-    background-color: var(--bg-card);
-    padding: 5px;
+    /* background-color: var(--bg-card); */
+    background: #000000;
+    padding: 10px;
     overflow-y: auto;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     gap: 15px;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 
 /* .sidebar-left{
@@ -85,29 +86,30 @@ body.is-fullscreen .main-sidebar {
  } */
 
 .sidebar-section {
-    padding: 10px 0;
+    padding: 0 0;
     border-bottom: solid 1px var(--border-color);
     overflow: hidden;
-    min-height: 200px;
+    height: 100%;
+    background: #F00;
 }
 .sidebar-section.collapsed {
-    height: 70px;
-    min-height: 70px;
+    height: 50px;
+    min-height: 50px;
 }
 
 .sidebar-section sidebar-title {
-    font-size: 14px;
-    font-weight: bold;
-    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 0;
     color: var(--text-color-light);
     display: flex;
     justify-content: space-between;
     padding: 10px;
+    background: #330;
 }
 
 /* Explorador de Arquivos */
 .file-explorer {
-    background-color: var(--bg-color);
     border-radius: 4px;
     overflow: hidden;
 }
